# quantile-index

./: .gitignore  .gitmodules  .kateproject  CMakeLists.txt  README.md  gov_2_bench  mem_usage.csv  memory.csv  result_file  result_mem_usage  result_mem_usage.txt  run_all.sh  run_gov2_bench.sh  run_memory_usage.sh  sdsl.sh  timing.csv  update-sdsl.sh
benchmark/: Makefile  experiment2.COL.config  experiment2.COL_INT.config  experiment2.IDX.config  experiment2.IDX_INT.config  experiment2.config  metascript.sh
benchmark/results/: all2.txt  all2_stick.txt  experiment1.nn.txt  experiment1.o.txt  experiment2.txt  experiment2a.txt  experiment2b.txt
benchmark/results_nn/: experiment1.0.txt  experiment1.1.txt  experiment1.128.txt  experiment1.16.txt  experiment1.2.txt  experiment1.32.txt  experiment1.4.txt  experiment1.64.txt  experiment1.8.txt  experiment1.txt
benchmark/results_o/: experiment1.0.txt  experiment1.1.txt  experiment1.128.txt  experiment1.16.txt  experiment1.2.txt  experiment1.32.txt  experiment1.4.txt  experiment1.64.txt  experiment1.8.txt  experiment1.txt
collections/: .gitignore  space_usage_IDX_TOP_DOWN.html
collections/SOURCES/: download.sh
collections/TEST_INT/: dict.txt  text_int_SURF.sdsl
collections/TEST_TXT/: text_SURF.sdsl
config/: BRUTE_INT.config  BRUTE_TXT.config  IDX_D.config  IDX_D_INT.config  IDX_NN.16.config  IDX_NN.32.config  IDX_NN.4.config  IDX_NN.64.config  IDX_NN.8.config  IDX_NN.H.16.config  IDX_NN.H.32.config  IDX_NN.H.4.config  IDX_NN.H.64.config  IDX_NN.H.8.config  IDX_NN.config  IDX_NN_16.config  IDX_NN_32.config  IDX_NN_4.config  IDX_NN_64.config  IDX_NN_8.config  IDX_NN_DOCID.config  IDX_NN_DOCID_NAIVE.config  IDX_NN_DOCID_SMART.config  IDX_NN_DOCID_SMART_INT.config  IDX_NN_DOCID_SMART_MAXQUERY.config  IDX_NN_DOCID_SMART_MAXQUERY_INT.config  IDX_NN_DOCID_SMART_SWITCH.config  IDX_NN_FAST.16.config  IDX_NN_FAST.32.config  IDX_NN_FAST.4.config  IDX_NN_FAST.64.config  IDX_NN_FAST.8.config  IDX_NN_FAST.config  IDX_NN_INT.16.config  IDX_NN_INT.32.config  IDX_NN_INT.4.config  IDX_NN_INT.64.config  IDX_NN_INT.8.config  IDX_NN_INT.config  IDX_NN_K3_DAAT.config  (+98 more)
experiments/exp1/: plot.R  results.csv  run.py
experiments/exp2/: plot.R  results.csv  run.py
experiments/exp3/: plot.R  results.csv  run.py
experiments/query-time-by-k/: plot.R  run.sh
experiments/query-time-by-sa-interval/: plot.R  run.sh
include/btree/: btree.h
include/surf/: config.hpp  construct_col_len.hpp  construct_darray.hpp  df_sada.hpp  idx_brute.hpp  idx_d.hpp  idx_nn.hpp  idx_nn_k2_daat.hpp  idx_nn_k3.hpp  idx_nn_quantile.hpp  idx_o.hpp  idx_quantile.hpp  idx_top_down.hpp  indexes.hpp  k2_treap_algos.hpp  k3_treap_algos.hpp  (+7 more)
results/: enwikibig_bv_int  enwikisml_bv  enwikisml_bv_int  space_usage_IDX_NN_INT.html  space_usage_IDX_O_INT.html
scripts/: benchmark.sh  build.sh  buildIndexes.py  build_config.sh  compare.py  construct.sh  download-collections.sh  format.sh  gen_queries.py  sdsl.sh  smoke_test.sh
src/: convert2surf.cpp  gen_patterns.cpp  gen_patterns_int.cpp  print_stats.cpp  surf_index.cpp  surf_query.cpp  tokenize_text.cpp
tools/: compare.py  convert2surf.cpp  format.sh  greedy_patch.cpp  input_size.cpp  text2surf.cpp  tokenize_text.cpp
web/: .gitignore  .gitmodules  Makefile  README.md  setup.py
(+21 files in other folders)
